# SSVSCollision

./: .gitignore  .gitmodules  Body.cpp  Body.h  CMakeLists.txt  CMakeLists.txt.user.0000000  CMakeLists.txt.user.5e4d6ab  CMakeLists.txt.user.ced8af0  Cell.cpp  Cell.h  CollisionInfo.h  SSVSCollision.h  SSVSCollision.txt  World.cpp  World.h
AABB/: AABB.cpp  AABB.h
Body/: Body.cpp  Body.h  BodyProperties.cpp  CallbackInfo.h  CollisionInfo.h
Grid/: Cell.cpp  Cell.h  Grid.cpp  Grid.h  GridInfo.cpp  GridInfo.h
Resolver/: ResolverBase.h
Resolver/Retro/: Retro.cpp  Retro.h
Resolver/Test/: Test.cpp  Test.h
Spatial/: SpatialBase.h  SpatialInfoBase.h
Spatial/Grid/: Cell.cpp  Cell.h  Grid.cpp  Grid.h  GridInfo.cpp  GridInfo.h
Utils/: Merge.cpp  Merge.h  Resolution.h  Traits.h  Utils.cpp  Utils.h
World/: World.cpp  World.h
cmake/Modules/: FindSFML.cmake  FindSSVSCollision.cmake
cmake/modules/: FindSSVSCollision.cmake
include/SSVSCollision/: SSVSCollision.h  SSVSCollision.hpp
include/SSVSCollision/AABB/: AABB.h  AABB.hpp
include/SSVSCollision/Body/: Base.h  Base.hpp  Body.h  Body.hpp  BodyData.h  BodyData.hpp  CallbackInfo.h  CallbackInfo.hpp  Enums.h  GroupData.h  Groupable.h  Groupable.hpp  MassData.h  Sensor.h  Sensor.hpp
include/SSVSCollision/Global/: Typedefs.h  Typedefs.hpp
include/SSVSCollision/Query/: Query.h  Query.hpp
include/SSVSCollision/Resolver/: Impulse.h  Impulse.hpp  Resolver.hpp  ResolverBase.h  Retro.h  Retro.hpp
include/SSVSCollision/Resolver/Impulse/: Impulse.h
include/SSVSCollision/Resolver/Retro/: Retro.h
include/SSVSCollision/Spatial/: SpatialBase.h  SpatialInfoBase.h
include/SSVSCollision/Spatial/Grid/: Cell.h  Cell.hpp  Grid.h  Grid.hpp  GridInfo.h  GridInfo.hpp  GridInfo.inl  GridInfoImpl.h  GridQuery.h  GridQueryTraits.h  GridQueryTypes.h  GridQueryTypes.hpp
include/SSVSCollision/Utils/: GroupManager.h  Segment.h  Segment.hpp  Traits.h  Utils.h  Utils.hpp  UtilsAABB.h  UtilsAABB.hpp
include/SSVSCollision/World/: GroupManager.h  World.h  World.hpp  World.inl  WorldImpl.h
src/SSVSCollision/AABB/: AABB.cpp
src/SSVSCollision/Body/: Base.cpp  Body.cpp  BodyProperties.cpp  Sensor.cpp
src/SSVSCollision/Resolver/Impulse/: Impulse.cpp
src/SSVSCollision/Resolver/Retro/: Retro.cpp
src/SSVSCollision/Spatial/Grid/: Cell.cpp  Grid.cpp  GridInfo.cpp  GridQuery.cpp  GridQueryTraits.cpp  GridQueryTypes.cpp
src/SSVSCollision/Utils/: Utils.cpp
src/SSVSCollision/World/: World.cpp
